<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="72dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProjectsReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/card_project_report"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="15dp"
            android:paddingTop="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/brown_800"
                android:textSize="16sp"
                android:text="@string/overview_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:paddingTop="15dp"
                android:paddingBottom="64dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="22dp"
                    android:paddingBottom="22dp"
                    android:background="@drawable/card_purple_rounded"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="2dp">

                    <TextView
                        android:id="@+id/tasks_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="26sp"
                        android:textColor="@color/white"
                        android:text="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp15"
                        android:fontFamily="@font/poppins"
                        android:text="@string/completeTask_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="22dp"
                    android:paddingBottom="22dp"
                    android:background="@drawable/card_salmon_rounded"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/tasks_ongoing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="26sp"
                        android:textColor="@color/white"
                        android:text="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp15"
                        android:fontFamily="@font/poppins"
                        android:text="@string/ongoingTask_text"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/brown_800"
                    android:textSize="16sp"
                    android:text="@string/progress_title"/>

                <!--PROGRESS BAR-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15dp">

                <ProgressBar
                    android:id="@+id/circularProgressbar"
                    style="@style/ReportProgressBar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:max="100"
                    android:progress="0"
                    android:secondaryProgress="100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressbar"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressbar"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressbar"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressbar"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_percentage"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/text_logo"
                            android:textSize="22sp"
                            android:text="0%" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/text_logo"
                            android:textSize="17sp"
                            android:text="@string/completed_state" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>