<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View"/>

        <variable
            name="item"
            type="fr.app.pling.model.Project"/>

        <variable
            name="vm"
            type="fr.app.pling.viewmodel.project.ProjectViewModel"/>
    </data>

    <androidx.cardview.widget.CardView

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/color_primary"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="19dp"
            android:paddingEnd="14dp"
            android:paddingBottom="20dp"
            android:paddingTop="16dp">

            <!-- Title   -->
            <TextView
                android:id="@+id/tv_title_projectCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.title}"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/brown_800"
                android:paddingBottom="6dp"/>

            <!--  State  -->
            <TextView
                android:id="@+id/tv_state_projectCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_state"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/state_progress"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:fontFamily="@font/poppins"
                    android:text="@string/deadline"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_date_projectCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:textColor="@color/brown_800"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_left"
                    android:fontFamily="@font/poppins"
                    android:textSize="12sp"
                    android:layout_weight="50"/>

                <TextView
                    android:id="@+id/tv_tasks_projectCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textColor="@color/brown_800"
                    android:fontFamily="@font/poppins"
                    android:textSize="12sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="12dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/progressbar"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>

